[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1.0", features = ["full"] }
# tokio + rustls
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql"  ] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
async-trait = "0.1.60"
